fix layout bug

--- a/styles.css
+++ b/styles.css
@@ -112,7 +112,7 @@ min-width: 400px;
 }
 
 .logo-section{
-    
+
    padding: 10px;
     display: flex;
     width: 100%;
@@ -317,25 +317,30 @@ outline: none;
 }
 @media  (max-width:640px) {
 .extensions-container{
-min-width: 39.7rem;
+width: 41.6rem;
 display: grid;
 
 grid-template-columns:1fr;
-
+align-items: center;
+padding: 0;
     }
     .main-container{
-    max-width: 50.06rem;
+    max-width: 100vw;
     padding: 9px 0px;
-margin: auto;
-
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
     }
 
 .header{
-    width: 90%;
-    
+    width: 100%;
+    padding: 12px;
 }
 .extesnio-list{
-    width: 100%;
+    margin:auto;
+    width: 43.8rem;
+    
     margin: 3rem 0 2rem 0;
     display: flex;
     flex-direction: column;
@@ -346,7 +351,7 @@ margin: auto;
 }
 
 .extension{
-    width: 28rem;
+    width: 33rem;
     
 }
 
